@@ -2,6 +2,8 @@
        with TortoiseUDiff", even if it was deselected during install. (Stefan)
 - BUG: Bogus revision graph for WC paths that have not been changed
        in the respective branch. (Stefan Fuhrmann)
+- BUG: Accessing repositories on UNC paths with file:// did not work if
+       the UNC path had spaces or special chars in it. (Stefan)
 
 Version 1.5.0
 - CHG: Support for IPv6 disabled due to problems with merging and terrible
